2003-11-15  Jesse Mullan  <jmullan@visi.com> 1.4.2-cvs-b18

	* Fixed php short tag to long tag in html_wrap/gallery.footer.default

2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b17

	* Removed error message so skins/ can be removed without problems.

2003-11-14  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b16

	* Updated gallery_remote2.php to tweak fetch-album-images and
	  fetch-albums*, adding some data that GR needs.
	* Also added some trivial debugging.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b15

	* Added backwards compatibility for user customized thumbnail frames.

	* check_versions more verbose, and translatable.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b14

	* Tidy up of validation link. Note this is not the  same as the change 
	  made in 1.4.1-RC4-b9.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b13

	* Moved email.log to .users directory.

2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b12

	* Ignore config_version when running backup script.

2003-11-13 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b11

	* Bugfix: Fixed wrong style.

	* Change: Fix Typo.
	
	* Change: Doctype is now more detailed.

	* New: Added function metatags() which writes metatags.
		- content-style-type
		- content-type
		- content-language

	* New: Added function common_header() which writes a commmon header
		- stylesheets
		- metatags

	* New: Added function unhtmlentities() which transforms html entities
	       back. This is necessary for Statusbar of IE and Opera.

	* Bugfix: When in Language Mode 0 (No ML at all) then check for
          PHP has gettext or not is skipped. So _() was undefined.
          Fixed now.

2003-11-13  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b10

	* Part 1 of 2 of improving skins capabilities.
	  - Added class="..." to various elements, mostly <a> tags.