@@ -1,3 +1,10 @@
+2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b19
+
+	* Added message if you run backup_albums.php from setup directory.
+
+	* Added message in config that slide show improvements don't 
+	  work for low tech version.
+
 2003-11-15  Jesse Mullan  <jmullan@visi.com> 1.4.2-cvs-b18
 
 	* Fixed php short tag to long tag in html_wrap/gallery.footer.default
